pom: Improved pom structure, configured plugins for execution, compilation and jar building